--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "bad.db": "^0.0.3",
+    "better-sqlite3": "^8.5.0",
     "convert-csv-to-array": "^1.0.3",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "quick.db": "^9.1.7"
   }
 }
