--- a/package.json
+++ b/package.json
@@ -1,21 +1,31 @@
 {
   "name": "armymanagement",
-  "version": "0.11.0",
+  "version": "0.15.0",
   "description": "Management software.",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "build": "electron-builder build"
   },
-  "author": "Braze Dev",
+  "author": "Uzair Dev",
   "license": "ISC",
   "devDependencies": {
     "electron": "^25.0.0",
-    "electron-rebuild": "^3.2.9"
+    "electron-rebuild": "^3.2.9",
+    "electron-builder": "^24.4.0"
   },
   "dependencies": {
     "better-sqlite3": "^8.5.0",
     "convert-csv-to-array": "^1.0.3",
     "quick.db": "^9.1.7"
+  },
+  "build": {
+    "appId": "dev.braze.${name}",
+    "copyright": "Copyright ©  2023 Uzair Dev",
+    "win": {
+      "target": "portable",
+      "publisherName": "Uzair Dev"
+    }
   }
 }
